# Codee-Firmware

./: .gitmodules  CMakeLists.txt  LovyanGFX.patch  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  main.cpp
main/src/: Pins.hpp  UIThread.cpp  UIThread.h
main/src/Devices/: Battery.cpp  Battery.h  Display.cpp  Display.h  Input.cpp  Input.h  SinglePwmLED.cpp
main/src/FS/: ArchiveCache.h  FileArchive.h  FileCache.h  RamFile.cpp  RamFile.h  RawCache.h
main/src/GIF/: GIF.cpp  GIF.h  gifdec.cpp  gifdec.h
main/src/GameEngine/: Game.cpp  Game.h  GameRunner.cpp  GameRunner.h  ResourceManager.cpp
main/src/Games/: Game5.cpp  Game5.h
main/src/JigHWTest/: JigHWTest.cpp  JigHWTest.h  SPIFFSChecksum.hpp
main/src/LV_Interface/: FSLVGL.cpp  FSLVGL.h  InputLVGL.cpp  InputLVGL.h  LVGIF.cpp  LVGL.cpp  LVGL.h  LVModal.cpp  LVScreen.cpp  LVSelectable.cpp
main/src/Modals/: Prompt.cpp  Prompt.h
main/src/Periph/: ADC.cpp  ADC.h  NVSFlash.h
main/src/Screens/: DeathScreen.cpp  DeathScreen.h  HatchScreen.cpp  HatchScreen.h  IntroScreen.cpp  IntroScreen.h  LevelUpScreen.cpp  LevelUpScreen.h  ScoreScreen.cpp  ScoreScreen.h  ShutdownScreen.cpp  ShutdownScreen.h  SplashScreen.cpp  SplashScreen.h
main/src/Services/: ADCReader.cpp  ADCReader.h  BacklightBrightness.cpp  BacklightBrightness.h  LEDService.cpp  LEDService.h  Power.cpp  Power.h  Sleep.cpp  Sleep.h  Stats.hpp  StatsManager.cpp  StatsManager.h  Time.cpp  Time.h
main/src/Settings/: Settings.cpp  Settings.h
main/src/Stats/: Stats.hpp  StatsManager.cpp  StatsManager.h
main/src/Util/: EfuseMeta.cpp  Events.h  (+5 more)
(+103 files in other folders)
